--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -14,59 +14,11 @@
 </head>
 
 <body class="body">
-	<div class="header-banner-container">
-
-		<header class="header">
-			<div class="container header__container">
-
-				<div class="header__inner">
+	<header class="header">
+		<div class="container">
+			<div class="header__inner">
 
 
-
-					<nav class="menu">
-						<ul class="menu-list">
-							<a class="menu-link" href="#">
-								<li class="menu-item menu-item--active">Home</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">About us</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">Discover</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">Blog</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">Journals</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">Galery</li>
-							</a>
-							<a class="menu-link" href="#">
-								<li class="menu-item">Contacts</li>
-							</a>
-						</ul>
-					</nav>
-
-
-
-
-
-
-
-
-
-					<nav class="mobile-burger">
-						<button class="mobile-burger__btn"></button>
-					</nav>
-
-				</div>
 			</div>
-
-		</header>
-
-
-
-	</div>
-	<!-- @@include('../mobile-nav.html') -->
+		</div>
+	</header>
