--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -88,16 +88,18 @@
 			</div>
 
 
-			<div class="booking">
-				<a href="#" class="booking__link">
-					<span class="booking__text-rus">Забронировать стол</span>
-					<span class="booking__text-chi">预订座位</span>
+			<div class="header__booking booking">
+				<a href="#" class="booking__link header__booking-link">
+					<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
+					<div class="header__booking-separator"></div>
+					<span class="header__booking-text-chi header__booking-text">预订座位</span>
 				</a>
 			</div>
-			<div class="delivery">
-				<a href="#" class="delivery__link">
-					<span class="delivery__text-chi">食品配送</span>
-					<span class="delivery__text-rus">ДОСТАВКА ЕДЫ НА ДОМ</span>
+			<div class="header__booking delivery">
+				<a href="#" class="delivery__link header__booking-link">
+					<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
+					<div class="header__booking-separator"></div>
+					<span class="header__booking-text-chi header__booking-text">食品配送</span>
 				</a>
 			</div>
 		</div>
