--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -73,10 +73,10 @@
 						<span class="header__phone-text">+7 954 123-85-07</span>
 					</div>
 					<a href="#" class="header__user-cab-link">
-						<img src="" alt="">
+						<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
 					</a>
 					<a href="#" class="header__cart-link">
-						<img src="" alt="">
+						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims" alt="main--menu--cart">
 						<span class="header__cart-items-qauntity">2</span>
 					</a>
 				</div>
