--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -69,14 +69,15 @@
 
 				<div class="header__user">
 					<div class="header__phone">
-						<img src="" alt="" class="">
+						<img src="img/sprite.svg#header--phone" class="svg-header--phone-dims" alt="header--phone">
 						<span class="header__phone-text">+7 954 123-85-07</span>
 					</div>
-					<a href="#" class="header__user-cab-link">
+					<a href="#" class="header__user-cab-link header__user-tools">
 						<img src="img/sprite.svg#header--user" class="svg-header--user-dims" alt="header--user">
 					</a>
-					<a href="#" class="header__cart-link">
-						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims" alt="main--menu--cart">
+					<a href="#" class="header__cart-link header__user-tools">
+						<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+							alt="main--menu--cart">
 						<span class="header__cart-items-qauntity">2</span>
 					</a>
 				</div>
@@ -84,24 +85,26 @@
 			</div>
 
 			<div class="logo">
-				<img src="img/logo.png" class="svg-header--logo-dims" alt="header--logo">
+				<img src="img/logo.png" class="logo-img" alt="header--logo">
 			</div>
 
+			<div class="header__booking-block">
+				<div class="header__booking booking">
+					<a href="#" class="booking__link header__booking-link">
+						<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
+						<div class="header__booking-separator"></div>
+						<span class="header__booking-text-chi header__booking-text">预订座位</span>
+					</a>
+				</div>
+				<div class="header__booking delivery">
+					<a href="#" class="delivery__link header__booking-link">
+						<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
+						<div class="header__booking-separator"></div>
+						<span class="header__booking-text-chi header__booking-text">食品配送</span>
+					</a>
+				</div>
+			</div>
 
-			<div class="header__booking booking">
-				<a href="#" class="booking__link header__booking-link">
-					<span class="header__booking-text-rus header__booking-text">Забронировать стол</span>
-					<div class="header__booking-separator"></div>
-					<span class="header__booking-text-chi header__booking-text">预订座位</span>
-				</a>
-			</div>
-			<div class="header__booking delivery">
-				<a href="#" class="delivery__link header__booking-link">
-					<span class="header__booking-text-rus header__booking-text">ДОСТАВКА ЕДЫ НА ДОМ</span>
-					<div class="header__booking-separator"></div>
-					<span class="header__booking-text-chi header__booking-text">食品配送</span>
-				</a>
-			</div>
 		</div>
 
 	</header>
