--- a/src/html/blocks/header/header.html
+++ b/src/html/blocks/header/header.html
@@ -20,12 +20,12 @@
 			<div class="header__top">
 				<div class="header__point-info">
 					<button class="header__point-adress">
-						<img src="" alt="">
+						<img src="img/sprite.svg#footer--map" class="svg-footer--map-dims" alt="footer--map">
 						<span class="header__point-adress-text">ул. Верхние Поля, дв56с4, Москва</span>
 					</button>
 
 					<div class="header__point-work-time">
-						<img src="" alt="">
+						<img src="img/sprite.svg#header--time" class="svg-header--time-dims" alt="header--time">
 						<span class="header__point-work-time-text">с 9:00-03:00</span>
 					</div>
 				</div>
