--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 @@include('blocks/header/header.html')
 <!-- @@include('blocks/mobile-nav.html') -->
 <main>
+	@@include('blocks/features.html')
 
 </main>
 
