--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <!-- @@include('blocks/mobile-nav.html') -->
 <main>
 	@@include('blocks/features.html')
-
+	@@include('blocks/menu.html')
 </main>
 
 <!-- <picture>
