--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -60,19 +60,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
+							<h6 class="dish-card__title-rus">Ассорти из холодных мясных закусок
+								с соусом</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">320 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
-							<div class="dish-card__price-old"></div>
+							<div class="dish-card__price-current">1080 ₽ </div>
+							<div class="dish-card__price-old">1920 ₽ </div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -84,19 +90,26 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">辣酱猪舌和牛肉色拉</h6>
+							<h6 class="dish-card__title-rus">Салат из свиного языка
+								и говядины
+								в остром соусе</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">400 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -108,19 +121,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">凉拌肉片 凉拌开胃菜加酱汁</h6>
+							<h6 class="dish-card__title-rus">Ассорти из холодных
+								мясных закусок с соусом</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">380 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -132,19 +151,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">清蒸鸡 炒菜</h6>
+							<h6 class="dish-card__title-rus">Цыпленок на пару
+								под соусом</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">500 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -156,19 +181,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">辣炒 羊肉排骨</h6>
+							<h6 class="dish-card__title-rus">Жареные острые
+								бараньи ребра</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">500 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
-							<div class="dish-card__price-old"></div>
+							<div class="dish-card__price-current">1680 ₽ </div>
+							<div class="dish-card__price-old">2220 ₽</div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -180,19 +211,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">烤羊肉 洋葱和兹拉</h6>
+							<h6 class="dish-card__title-rus">Жареная баранина
+								с луком и зирой</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">410 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -204,19 +241,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">清蒸中国鲟鱼</h6>
+							<h6 class="dish-card__title-rus">Китайский осетр
+								на пару</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">720 -900 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">3280 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -228,19 +271,24 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">多宝鱼</h6>
+							<h6 class="dish-card__title-rus">Тюрбо</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">400 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">1080 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -252,19 +300,24 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">冬荫功汤</h6>
+							<h6 class="dish-card__title-rus">Суп Том Ям</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">700 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">880 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -276,19 +329,25 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">炒豆子馅饼</h6>
+							<h6 class="dish-card__title-rus">Жареные шарики
+								с начинкой из бобов</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">500 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -300,19 +359,26 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">蔬菜烤肉 和辣酱</h6>
+							<h6 class="dish-card__title-rus">Жареная свинина
+								с овощами
+								и острым соусом</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">500 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">980 ₽</div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 					<li class="dish-card">
@@ -324,22 +390,33 @@
 							</div>
 						</a>
 						<a href="#" class="dish-card__title">
-							<h6 class="dish-card__title-chi"></h6>
-							<h6 class="dish-card__title-rus"></h6>
+							<h6 class="dish-card__title-chi">甜酱烤肉</h6>
+							<h6 class="dish-card__title-rus">Жареная свинина
+								в сладком соусе</h6>
 						</a>
-						<div class="dish-card__weight"></div>
+						<div class="dish-card__weight">410 гр.</div>
 						<div class="dish-card__price-block">
-							<div class="dish-card__price-current"></div>
+							<div class="dish-card__price-current">1280 ₽ </div>
 							<div class="dish-card__price-old"></div>
 						</div>
 						<form action="" class="dish-card__purchase">
-							<div class="dish-card__counter-block"><button class="dish-card__minus"></button><input
-									type="number" class="dish-card__counter"><button
-									class="dish-card__plus"></button><button
-									class="dish-card__add-to-cart-btn"></button></div>
+							<div class="dish-card__counter-block">
+								<button class="dish-card__minus">-</button>
+								<input type="number" class="dish-card__counter" value="0">
+								<button class="dish-card__plus">+</button>
+							</div>
+							<button class="dish-card__add-to-cart-btn">
+								<img src="img/sprite.svg#main--menu--cart" class="svg-main--menu--cart-dims"
+									alt="main--menu--cart">
+							</button>
 						</form>
 					</li>
 				</ul>
+				<a href="#" class="section-menu__see-all-btn">
+					<span class="section-menu__see-all-text-chi">食品配送</span>
+					<span class="section-menu__see-all-separator"></span>
+					<span class="section-menu__see-all-text-rus">ПОСМОТРЕТЬ ВСЕ МЕНЮ</span>
+				</a>
 			</div>
 		</div>
 	</div>
