--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -2,8 +2,8 @@
 	<div class="container">
 		<div class="section-menu__inner">
 			<div class="section-menu__title">
-				<h2 class="menu__title-rus">НАШЕ МЕНЮ</h2>
-				<h2 class="menu__title-chi">我们的菜单</h2>
+				<h2 class="section-menu__title-rus">НАШЕ МЕНЮ</h2>
+				<h2 class="section-menu__title-chi">我们的菜单</h2>
 			</div>
 			<div class="menu-categories">
 				<ul class="menu-categories__list">
@@ -50,7 +50,7 @@
 							</span><span class="menu-categories__text-chi"> 饮料</span></a>
 					</li>
 				</ul>
-				<ul class="menu__card-list">
+				<ul class="section-menu__card-list">
 					<li class="dish-card">
 						<a href="#" class="dish-card__img-link">
 							<div class="dish-card__labels">
