--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -1,9 +1,11 @@
 <section class="section-menu">
 	<div class="container">
 		<div class="section-menu__inner">
-			<div class="section-menu__title">
-				<h2 class="section-menu__title-rus">НАШЕ МЕНЮ</h2>
-				<h2 class="section-menu__title-chi">我们的菜单</h2>
+			<div class="section-menu__title-container">
+				<div class="section-menu__title">
+					<h2 class="section-menu__title-rus">НАШЕ МЕНЮ</h2>
+					<h2 class="section-menu__title-chi">我们的菜单</h2>
+				</div>
 			</div>
 			<div class="menu-categories">
 				<ul class="menu-categories__list">
