--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -8,6 +8,10 @@
 				</div>
 			</div>
 			<div class="menu-categories">
+				<button class="menu-categories__menu-arrow-btn">
+					<img src="img/sprite.svg#main--menu--arrow" class="svg-main--menu--arrow-dims"
+						alt="main--menu--arrow">
+				</button>
 				<ul class="menu-categories__list">
 					<li class="menu-categories__item menu-categories__item--active">
 						<a href="#" class="menu-categories__link"><span
