--- a/src/html/blocks/menu.html
+++ b/src/html/blocks/menu.html
@@ -62,9 +62,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 
@@ -96,9 +96,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -130,9 +130,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -163,9 +163,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -196,9 +196,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -229,9 +229,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -262,9 +262,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -295,9 +295,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -327,9 +327,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -359,9 +359,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -392,9 +392,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
@@ -426,9 +426,9 @@
 					<a href="#" class="dish-card__img-link">
 						<div class="dish-card__img-container"></div>
 						<div class="dish-card__labels">
-							<div class="dish-card__label-new"></div>
-							<div class="dish-card__label-hit"></div>
-							<div class="dish-card__label-sale"></div>
+							<div class="dish-card__label-new">New</div>
+							<div class="dish-card__label-hit">Хит</div>
+							<div class="dish-card__label-sale">-30%</div>
 						</div>
 					</a>
 					<div class="dish-card__text-container">
